--- a/docs/ru/Настройка Engine.WIKI
+++ b/docs/ru/Настройка Engine.WIKI
@@ -1,21 +1,21 @@
-Инструкция с учетом установки KDB по этой инструкции:
+РРЅСЃС‚СЂСѓРєС†РёСЏ СЃ СѓС‡РµС‚РѕРј СѓСЃС‚Р°РЅРѕРІРєРё KDB РїРѕ СЌС‚РѕР№ РёРЅСЃС‚СЂСѓРєС†РёРё:
 
-Создаем необходимые каталоги:
+РЎРѕР·РґР°РµРј РЅРµРѕР±С…РѕРґРёРјС‹Рµ РєР°С‚Р°Р»РѕРіРё:
 
 mkdir -p /usr/share/engine/bin /var/log/engine/ /etc/engine
 
-Копируем все необходимое:
+РљРѕРїРёСЂСѓРµРј РІСЃРµ РЅРµРѕР±С…РѕРґРёРјРѕРµ:
 
 cp /usr/local/src/kphp-kdb/objs/bin/* /usr/share/engine/bin/
 cp /usr/local/src/kphp-kdb/scripts/debian-init.d-engine /etc/init.d/engine
 cp /usr/local/src/kphp-kdb/scripts/_etc_logrotate.d_engine /etc/logrotate.d/engine
 cp /usr/local/src/kphp-kdb/scripts/start-engine /usr/share/engine/bin/
 
-Настраиваем ротацию логов:
+РќР°СЃС‚СЂР°РёРІР°РµРј СЂРѕС‚Р°С†РёСЋ Р»РѕРіРѕРІ:
 
 logrotate -d /etc/logrotate.d/engine
 logrotate -v -f /etc/logrotate.d/engine
 
-Теперь можно запускать KDB движки и скомпилированные KPHP сервера как демоны.
+РўРµРїРµСЂСЊ РјРѕР¶РЅРѕ Р·Р°РїСѓСЃРєР°С‚СЊ KDB РґРІРёР¶РєРё Рё СЃРєРѕРјРїРёР»РёСЂРѕРІР°РЅРЅС‹Рµ KPHP СЃРµСЂРІРµСЂР° РєР°Рє РґРµРјРѕРЅС‹.
 
-Для примера запустим lists-engine: Запуск/Настройка Lists-Engine
+Р”Р»СЏ РїСЂРёРјРµСЂР° Р·Р°РїСѓСЃС‚РёРј lists-engine: Р—Р°РїСѓСЃРє/РќР°СЃС‚СЂРѕР№РєР° Lists-Engine
